load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_java//java:defs.bzl", "java_binary")
load(":jdk_tools.bzl", "jdk_tool")

# Windows target + Unicode defines matching the shared harness / root targets.
_HELPER_DEFINES = [
    "UNICODE",
    "_UNICODE",
    "WIN32_LEAN_AND_MEAN",
    "NOMINMAX",
    "_WIN32_WINNT=0x0A00",
    "NTDDI_VERSION=0x0A000006",
]

# Sandboxed children (the java launcher + hermetic JVM) need the standard
# Windows variables to initialize and be found on PATH under `bazel test`'s
# scrubbed environment.
_ENV_INHERIT = [
    "ALLUSERSPROFILE",
    "APPDATA",
    "CommonProgramFiles",
    "ComSpec",
    "HOMEDRIVE",
    "HOMEPATH",
    "LOCALAPPDATA",
    "NUMBER_OF_PROCESSORS",
    "OS",
    "PATH",
    "PATHEXT",
    "PROCESSOR_ARCHITECTURE",
    "ProgramData",
    "ProgramFiles",
    "ProgramFiles(x86)",
    "ProgramW6432",
    "PUBLIC",
    "SystemDrive",
    "SystemRoot",
    "TEMP",
    "TMP",
    "USERPROFILE",
    "WINDIR",
]

# Java program exercising read/write/rename/move/delete through java.nio.file.
# Run UNDER the sandbox by the cc_test; takes the execroot as argv[0] and
# mutates <execroot>/wd. rules_java emits a native launcher (.exe) that runs the
# classpath jar on the hermetic remote JDK; the JDK runtime + jars ride along in
# its runfiles.
java_binary(
    name = "fs_ops",
    srcs = ["FsOps.java"],
    main_class = "FsOps",
    visibility = ["//visibility:public"],
)

# Java program exercising the enumeration splice: a directory listing that
# merges real on-disk entries with overlay-only ones, hides deleted/renamed-away
# entries, and honors a glob filter. Same launcher shape as fs_ops.
java_binary(
    name = "enum_ops",
    srcs = ["EnumOps.java"],
    main_class = "EnumOps",
    visibility = ["//visibility:public"],
)

# Java program exercising input-filtering: a declared -r input is fully visible
# (listed + readable) while an undeclared sibling is masked NOT_FOUND (absent
# from the listing, Files.readString throws NoSuchFileException). Same launcher
# shape as fs_ops.
java_binary(
    name = "filter_ops",
    srcs = ["FilterOps.java"],
    main_class = "FilterOps",
    visibility = ["//visibility:public"],
)

# Java program exercising the COMBINED --filter-inputs --write-overlay edge
# cases: create / rename-onto / create-then-rename-away / create-then-delete of a
# name that shadows a HIDDEN undeclared input, plus bare NOT_FOUND-no-op guards.
# Files.move/Files.delete take the path-based MoveFileEx/DeleteFile hooks.
java_binary(
    name = "filter_overlay_ops",
    srcs = ["FilterOverlayOps.java"],
    main_class = "FilterOverlayOps",
    visibility = ["//visibility:public"],
)

# Java program exercising the CreateProcess working-directory overlay redirect
# (the rules_go GoStdlib regression): it ProcessBuilder-launches itself with a
# working directory that exists only in the overlay backing store. Same launcher
# shape as fs_ops.
java_binary(
    name = "spawn_ops",
    srcs = ["SpawnOps.java"],
    main_class = "SpawnOps",
    visibility = ["//visibility:public"],
)

# Java program exercising declared-output (-w) write-through under
# --write-overlay: a -w output writes THROUGH to the real execroot while an
# undeclared sibling is redirected into the overlay. Same launcher shape as
# fs_ops.
java_binary(
    name = "writeout_ops",
    srcs = ["WriteOut.java"],
    main_class = "WriteOut",
    visibility = ["//visibility:public"],
)

# The hermetic remote JDK's java + javac executables, re-exported at their real
# runfiles paths so the classpath-load and javac-into-overlay cases can invoke
# them directly (rather than via a java_binary launcher). Used to drive the raw
# `java -cp` / `javac -d` command lines the classpath-load and javac-into-overlay
# cases exercise.
jdk_tool(
    name = "jdk_java",
    tool = "java",
    visibility = ["//visibility:public"],
)

jdk_tool(
    name = "jdk_javac",
    tool = "javac",
    visibility = ["//visibility:public"],
)

# Write-overlay VFS e2e: drives BazelSandbox against the hermetic Java binaries
# and asserts overlay read-after-write, enumeration splice, an unchanged real
# execroot, and input-filtering (declared visible / undeclared masked). The
# launchers (with the hermetic JDK runtime) and BazelSandbox (with its
# co-located DetoursServices.dll) ride as `data`; their runfiles rlocationpaths
# are handed to the test via env vars.
cc_test(
    name = "overlay_java",
    # JVM startup dominates; ~10s for all three cases run serially.
    size = "small",  # 60s timeout
    srcs = ["overlay_java_test.cc"],
    data = [
        "@bazel_sandbox_windows//:BazelSandbox",
        ":enum_ops",
        ":filter_ops",
        ":filter_overlay_ops",
        ":fs_ops",
        ":jdk_java",
        ":jdk_javac",
        ":spawn_ops",
        ":writeout_ops",
    ],
    env = {
        "E2E_SANDBOX": "$(rlocationpath @bazel_sandbox_windows//:BazelSandbox)",
        "E2E_JAVA_FSOPS": "$(rlocationpath :fs_ops)",
        "E2E_JAVA_ENUMOPS": "$(rlocationpath :enum_ops)",
        "E2E_JAVA_FILTEROPS": "$(rlocationpath :filter_ops)",
        "E2E_JAVA_FILTEROVERLAYOPS": "$(rlocationpath :filter_overlay_ops)",
        "E2E_JAVA_JAVA": "$(rlocationpath :jdk_java)",
        "E2E_JAVA_JAVAC": "$(rlocationpath :jdk_javac)",
        "E2E_JAVA_SPAWNOPS": "$(rlocationpath :spawn_ops)",
        "E2E_JAVA_WRITEOUTOPS": "$(rlocationpath :writeout_ops)",
    },
    env_inherit = _ENV_INHERIT,
    local_defines = _HELPER_DEFINES,
    deps = [
        "@bazel_sandbox_windows//tests/e2e:e2e_harness",
        "@googletest//:gtest_main",
    ],
)
